[package]
name = "ve"
version = "0.1.0"
authors = ["oded@kzencorp.com <oded@kzencorp.com>"]
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ve"
crate-type = ["staticlib", "dylib"]

[build-dependencies]
neon-build = "0.9.1"

[dependencies]
neon = "0.9.1"
zeroize = "1.4.3"
serde = "1.0.130"
serde_json = "1.0.72"
serde_derive = "1.0.130"
secp256k1 = "0.20.3"
centipede = { git = "https://github.com/KZen-networks/centipede", tag = "v0.3.0" }
curv = { version = "0.9.0", package = "curv-kzen"}
hex = "0.4.3"
